modules/network/alb.tf
resource "aws_lb" "ecs_alb" {
  # name               = "sotw-ecs-alb-${var.env}"
  name               = "ecs-alb-${var.env}"
  internal           = false
  load_balancer_type = "application"
  security_groups    = [aws_security_group.alb.id]
  subnets            = [aws_subnet.ecs_1a.id, aws_subnet.ecs_1b.id]

  tags = {
    Name = "ecs-alb-${var.env}"
  }
}

resource "aws_lb_listener" "ecs_alb_listener" {
  load_balancer_arn = aws_lb.ecs_alb.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    order = 1
    type  = "redirect"
    redirect {
      host        = "#{host}"
      path        = "/#{path}"
      port        = "443"
      protocol    = "HTTPS"
      query       = "#{query}"
      status_code = "HTTP_301"
    }
  }
}

data "aws_acm_certificate" "certificate" {
  domain      = var.domain_name
  statuses    = ["ISSUED"]
  most_recent = true
}

resource "aws_lb_listener" "ecs_alb_listener_https" {
  load_balancer_arn = aws_lb.ecs_alb.arn
  port              = 443
  protocol          = "HTTPS"
  certificate_arn   = data.aws_acm_certificate.certificate.arn
  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.ecs_tg_ip.arn
  }
}


resource "aws_lb_target_group" "ecs_tg" {
  name        = "sotw-ecs-target-group-${var.env}"
  port        = 80
  protocol    = "HTTP"
  target_type = "instance"
  vpc_id      = aws_vpc.main.id
  health_check {
    path     = "/"
    timeout  = 30
    interval = 120
  }
}


resource "aws_lb_target_group" "ecs_tg_ip" {
  name        = "sotw-ecs-target-group-${var.env}"
  port        = 80
  protocol    = "HTTP"
  target_type = "ip"
  vpc_id      = aws_vpc.main.id
  health_check {
    path     = "/"
    timeout  = 30
    interval = 120
  }
}
